--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
     // Load the pre-trained MNIST model from TensorFlow.js
     let model;
     async function loadModel() {
-        model = await tf.loadLayersModel('https://storage.googleapis.com/tfjs-models/tfjs/mnist/model.json');
-        console.log('Model loaded');
-        document.getElementById('loadingMessage').innerText = 'Model loaded. You can now draw and predict.';
+        try {
+            model = await tf.loadLayersModel('https://storage.googleapis.com/tfjs-models/tfjs/mnist/model.json');
+            console.log('Model loaded');
+            document.getElementById('loadingMessage').innerText = 'Model loaded. You can now draw and predict.';
+        } catch (error) {
+            console.error('Error loading the model:', error);
+            document.getElementById('loadingMessage').innerText = 'Failed to load the model. Please check your internet connection and try again.';
+        }
     }
     loadModel();
 
